feat!: Flight Plan Expansion + Category and Type (#261)
* working on route expansion

* initial implementation of category and type filtering

* Had the logic backwards. Added tests for the new filtering.

* javadocs

* fixes

* oops

* oof