@@ -7,17 +7,21 @@ import static org.mitre.tdp.boogie.util.Streams.triplesWithNulls;
 import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 
 import org.mitre.caasd.commons.LatLong;
 import org.mitre.tdp.boogie.Airport;
 import org.mitre.tdp.boogie.Airway;
+import org.mitre.tdp.boogie.CategoryAndType;
 import org.mitre.tdp.boogie.Fix;
 import org.mitre.tdp.boogie.Leg;
 import org.mitre.tdp.boogie.Procedure;
 import org.mitre.tdp.boogie.alg.LookupService;
+import org.mitre.tdp.boogie.alg.resolve.infer.KeepTransition;
 import org.mitre.tdp.boogie.alg.split.RouteToken;
 import org.mitre.tdp.boogie.alg.split.RouteTokenizer;
 
@@ -173,8 +177,31 @@ public interface RouteTokenResolver {
    */
   ResolvedTokens resolve(@Nullable RouteToken previous, RouteToken current, @Nullable RouteToken next);
 
-  default List<ResolvedTokens> applyTo(List<RouteToken> sectionSplits) {
-    return triplesWithNulls(sectionSplits, this::resolve).collect(Collectors.toList());
+  default List<ResolvedTokens> applyTo(List<RouteToken> sectionSplits, CategoryAndType categoryAndType) {
+    KeepTransition keepTransition = KeepTransition.of(categoryAndType);
+    return triplesWithNulls(sectionSplits, this::resolve)
+        .map(token -> thinAll(token, keepTransition))
+        .toList();
+  }
+
+  /**
+   * This method will remove transitions from any SID/STAR tokens that don't apply to the category/type
+   * @param tokens the token to check and thin
+   * @param keepTransition the predicate for keeping a transition
+   * @return a thinned or not token
+   */
+  default ResolvedTokens thinAll(ResolvedTokens tokens, KeepTransition keepTransition) {
+    List<ResolvedToken> list = tokens.resolvedTokens().stream()
+        .map(token -> thin(token, keepTransition))
+        .toList();
+    return new ResolvedTokens(tokens.routeToken(), list);
+  }
+
+  default ResolvedToken thin(ResolvedToken token, KeepTransition keepTransition) {
+    Optional<ResolvedToken> sid = ResolvedTokenVisitor.sid(token).map(i -> Procedure.maskTransitions(i,keepTransition.negate())).map(ResolvedToken::sidEnrouteCommon);
+    Supplier<Optional<ResolvedToken>> star = () -> ResolvedTokenVisitor.star(token).map(i -> Procedure.maskTransitions(i,keepTransition.negate())).map(i -> (ResolvedToken) ResolvedToken.starEnrouteCommon(i));
+    return sid.or(star).orElse(token);
+
   }
 
   /**
